可以出现敌人

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <section id="imgresource">
         <img src="img/tower.png" id="imgTower"  />
+        <img src="img/enemy.png" id="imgEnemy"  />
 
     </section>
     <section id="game">
@@ -23,7 +24,9 @@
 
     <script src="js/Config.js"></script>
     <script src="js/Tools.js"></script>
+    <script src="js/Enemy.js"></script>
     <script src="js/Map.js"></script>
+
     <script src="js/Tower.js"></script>
     <script src="js/Game.js"></script>
 
