重新整理前的提交

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <article class="main">
-
     <section id="imgresource">
         <img src="img/tower.png" id="imgTower"  />
         <img src="img/enemy.png" id="imgEnemy"  />
+        <img src="img/bullet.png" id="imgBullet" />
 
     </section>
     <section id="game">
@@ -22,13 +22,13 @@
         <canvas id="info" width="100" height="600" style="background-color:#224422;position:absolute;left:600px;top:0;z-index:102;"></canvas>
     </section>
 
-    <script src="js/Config.js"></script>
-    <script src="js/Tools.js"></script>
-    <script src="js/Enemy.js"></script>
-    <script src="js/Map.js"></script>
-
-    <script src="js/Tower.js"></script>
-    <script src="js/Game.js"></script>
+    <script type="text/javascript"  src="js/Config.js"></script>
+    <script type="text/javascript"  src="js/Tools.js"></script>
+    <script type="text/javascript"  src="js/Enemy.js"></script>
+    <script type="text/javascript"  src="js/Map.js"></script>
+    <script type="text/javascript"  src="js/Bullet.js"></script>
+    <script type="text/javascript"  src="js/Tower.js"></script>
+    <script type="text/javascript"  src="js/Game.js"></script>
 
 
 
