修复魔鬼数字，新增子弹的配置

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <article class="main">
-    <section id="imgresource">
+    <section id="imgResource">
         <img src="img/tower.png" id="imgTower"  />
         <img src="img/enemy.png" id="imgEnemy"  />
         <img src="img/bullet.png" id="imgBullet" />
